Replace a bunch of deprecated wrapper-type (Boolean, etc) constructors with calls to valueOf.