@@ -473,7 +473,7 @@ public class ObjectInspector extends Inspector
         // mimic the public length field that arrays possess
         // according to the java spec...
         indexToSlotList = new LinkedList<Integer>();
-        indexToSlotList.add(0, new Integer(ARRAY_LENGTH_SLOT_VALUE));
+        indexToSlotList.add(0, Integer.valueOf(ARRAY_LENGTH_SLOT_VALUE));
 
         // the +1 here is due to the fact that if we do not have at least one
         // more than
@@ -494,7 +494,7 @@ public class ObjectInspector extends Inspector
 
             // now the first of our expansion slots
             newArray.add(new FieldInfo("[...]", ""));
-            indexToSlotList.add(new Integer(ARRAY_QUERY_SLOT_VALUE));
+            indexToSlotList.add(Integer.valueOf(ARRAY_QUERY_SLOT_VALUE));
 
             for (int i = VISIBLE_ARRAY_TAIL; i > 0; i--) {
                 // last 5 elements are displayed
